Linked HTML and CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <title>Steve Jobs Tribute Page</title>
 <header class="page-header">
 
